# apply-params-to-script

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  rollup.config.js
crate/: Cargo.toml
crate/src/: lib.rs
src/: index.ts
test/: cab_interop.test.ts  param_application.test.ts
